--- a/.github/workflows/readme-build.yml
+++ b/.github/workflows/readme-build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main, master ]
     paths:
-      - "Code/Main/0_Set_up.Rmd"
+      - "0_set-up.Rmd"
       - ".github/workflows/readme-build.yml"
   workflow_dispatch:
 
@@ -15,18 +15,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: r-lib/actions/setup-r@v2
-      - uses: r-lib/actions/setup-pandoc@v2
-      - name: Install rmarkdown
-        run: Rscript -e "install.packages('rmarkdown', repos='https://cloud.r-project.org')"
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+
+      - name: Set up Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
+
+      - name: Install rmarkdown (minimal deps for README)
+        run: |
+          Rscript -e "install.packages(c('rmarkdown','knitr','here','fs','cli','glue','ggplot2'), repos='https://cloud.r-project.org')"
+
       - name: Render README
-        run: >
-          Rscript -e "rmarkdown::render('Code/Main/0_Set_up.Rmd',
-          output_format='github_document', output_file='README.md')"
-      - name: Commit README
+        run: |
+          Rscript -e "rmarkdown::render('0_set-up.Rmd', output_format='github_document', output_file='README.md')"
+
+      - name: Commit and push README
         uses: EndBug/add-and-commit@v9
         with:
           add: "README.md"
-          message: "CI: rebuild README from 0_Set_up.Rmd"
+          message: "CI: rebuild README from 0_set-up.Rmd"
           default_author: github_actions
