--- a/.github/workflows/sync-to-website.yml
+++ b/.github/workflows/sync-to-website.yml
@@ -1,10 +1,10 @@
-name: Sync project assets to website
+name: Sync public/ to website
 
 on:
   push:
     branches: [ main, master ]
     paths:
-      - "Results/Figures/**"
+      - "public/**"
       - ".github/workflows/sync-to-website.yml"
   workflow_dispatch:
 
@@ -12,28 +12,26 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout project
+      - name: Checkout project repo
         uses: actions/checkout@v4
 
       - name: Checkout website repo
         uses: actions/checkout@v4
         with:
           repository: jaeseokh/jaeseokh.github.io
-          token: ${{ secrets.WEBSITE_TOKEN }}
+          token: ${{ secrets.jae_web_sync_token }}
           path: site
 
-      - name: Copy assets into site
+      - name: Copy assets into website static dir
         run: |
           mkdir -p site/static/projects/value_multifield_ofpe
-          # copy the two files; add more if you like
-          cp -f Results/Figures/hero.png site/static/projects/value_multifield_ofpe/ 2>/dev/null || true
-          cp -f Results/Figures/summary.md site/static/projects/value_multifield_ofpe/ 2>/dev/null || true
+          cp -r public/* site/static/projects/value_multifield_ofpe/ || true
 
-      - name: Commit to website
+      - name: Commit and push changes to website
         run: |
           cd site
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add static/projects/value_multifield_ofpe
-          git commit -m "Update OFE project assets from value_multifield_ofpe" || echo "No changes"
+          git commit -m "Update project assets from value_multifield_ofpe" || echo "No changes to commit"
           git push
