update the bayesian model and writing

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ Code/Main/N_unit_check.RMD
 
 Writing/*
 Literature/*
+Data/*
 
-# Results (ignore everything except main figure and table)
+Results/Sandbox/*
